classDiagram

    class GameController {
        -List~IPlayer~ _players
        -IDice _dice
        -int _currentTurnIndex
        -IBoard _board
        %% Dictionary<Color, List<Position>>
        -Dictionary~Color, List ~Position~~ playerPaths

        +GameController(IPlayer, IPlayer, IPlayer, IPlayer, IDice, IBoard)
        +StartGame()
        +RollDice() int
        +GetCurrentPlayer() Player
        +NextTurn()
        +CanMove(Piece, int)
        +MovePiece(Piece, int, int) bool
        +CheckWin(Player)
        +CaptureIfExists()
        +CanEnterFromBase(Piece, int) bool
        +GetPathForPlayer(Color) List~Position~
        +GetPiecePathIndex(Piece) int
        +event Action OnGameStart
    }

    class IPlayer {
        <<Interface>>
        +string Name
        +Color Color
    }

    class Player {
        +string Name
        +Color Color
        +List~Piece~ Pieces
        +Player(string, Color)
    }

    class Piece {
        +int Id
        +Color PieceColor
        +Player PlayerOwner
        +PieceState State
        +int StepIndex
        +Piece(int, Color, Player)
    }

    class IDice {
        +int Roll()
    }

    class Dice {
        -Random _random
        +Dice()
        +Roll() int
    }

    class IBoard{
        +int[,] Grid 
        +GetZoneType(int, int) ZoneType
        +IsSafeZone(int, int) bool
        +IsBlocked(int, int) bool
    }

    class Board{
        +int[,] Grid = new Grid[15,15]
        -Dictionary~Position, ZoneType~ zoneMap
        +Board()
        +InitializeZones()
        +GetZoneType(int, int) ZoneType
        +IsSafeZone(int, int) bool
        +IsBlocked(int, int) bool
    }

    class Position {
        <<struct>>
        +int X
        +int Y
        +Position()
    }

    class Color {
        <<enumeration>>
        BLUE
        RED
        GREEN
        YELLOW
    }

    class ZoneType {
        <<enumeration>>
        Base
        StartPoint
        CommonPath
        HomePath
        HomePoint
        SafeZone
        BlockedPath
        Empty
    }

    class PieceState{
        AtBase
        Active
        Home
    }

    GameController *-- Player : uses
    Player ..|> IPlayer : realization
    Player --> Color : uses
    Player *-- Piece : owns
    Piece --> Color : uses
    Dice ..|> IDice : realization
    GameController *-- Dice : uses
    Board ..|> IBoard : realization 
    GameController *-- Board : uses
    Piece --> Position : has
    Board --> ZoneType : maps
    Board --> Position : key
    Piece --> PieceState
    